# aurelius

./: .eslintrc.json  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .sops.yaml  git-version.json  mkdocs.yaml  nx.json  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
apps/m4i-data-dictionary-io/: .env  .env.enc  Dockerfile  README.md  project.json  pyproject.toml  sonar-project.properties
apps/m4i-data-dictionary-io/m4i_data_dictionary_io/: __init__.py  __main__.py
apps/m4i-data-dictionary-io/tests/: conftest.py  docker-compose.yml  test__m4i_data_dictionary_io.py  test__parse_avro_schema.py  test__parse_json_schema.py  test__parse_payload.py
backend/m4i-atlas-post-install/: .env.enc  Dockerfile  project.json  pyproject.toml  sonar-project.properties
backend/m4i-atlas-post-install/data/: atlas-dev-gov-quality.json  atlas-dev-quality.json  atlas-dev.json
backend/m4i-atlas-post-install/m4i_atlas_post_install/: __init__.py  app_search_engine_setup.py  connect_datasets_with_entities_backwards_map.py  connect_entities_with_datasets.py  export_diff.py  get_all_documents.py  index_all_documents.py  index_template.py  results.json  results.txt  testscript.py
backend/m4i-atlas-post-install/scripts/: connect_datasets_with_entities.py  download_engines.py  export_atlas.py  get_keycloak_token.py  init_app_search_engines.py  init_atlas_types.py  propagate_quality.py  retrieve_elastic_search_key.py  update_gov_index.py
backend/m4i-atlas-post-install/tests/: test_connect_datasets.py  test_data.json
backend/m4i-atlas-rest-api/: project.json  pyproject.toml  requirements.txt
backend/m4i-atlas-rest-api/src/: Dockerfile  Pipfile
backend/m4i-consistency-metrics/: .env.enc  Dockerfile  README.md  project.json  pyproject.toml  sonar-project.properties
backend/m4i-consistency-metrics/m4i_consistency_metrics/: consistency_metrics.py
backend/m4i-data2model/: .env.enc  Dockerfile  README.md  project.json  pyproject.toml  sonar-project.properties
backend/m4i-data2model/m4i_data2model/: __init__.py  data2model.py
backend/m4i-lineage-model/: .env.enc  Dockerfile  README.md  conf.py  project.json  pyproject.toml  sonar-project.properties
backend/m4i-lineage-model/m4i_lineage_model/: __init__.py  lineage_model.py
backend/m4i-lineage-rest-api/: .env.enc  Dockerfile  README.md  conf.py  project.json  pyproject.toml  sonar-project.properties
backend/m4i-lineage-rest-api/e2e/: conftest.py  test_m4i_generic_entity_serializers.py
backend/m4i-lineage-rest-api/m4i_lineage_rest_api/: app.py  config.py  credentials.py  settings.py
backend/m4i-lineage-rest-api/tests/: conftest.py  test_m4i_generic_entity_serializers.py
backend/m4i-publish-state/: .env.enc  Dockerfile  docker-compose.yaml  project.json  pyproject.toml  sonar-project.properties
backend/m4i-publish-state/m4i_publish_state/: __main__.py  publish_state.py
backend/m4i-search-api/: .env.enc  Dockerfile  README.md  conf.py  project.json  pyproject.toml
backend/m4i-search-api/e2e/: conftest.py  docker-compose.yml  test__m4i_search_api_auth_required.py  test__m4i_search_api_health.py  test__m4i_search_api_proxy_requests.py  test_e2e__m4i_search_api_auth_required.py  test_e2e__m4i_search_api_health.py  test_e2e__m4i_search_api_proxy_requests.py
backend/m4i-search-api/m4i_search_api/: __init__.py  app.py  globals.py  settings.py
backend/m4i-search-api/tests/: conftest.py  test__m4i_search_api_app.py  test_app.py  test_settings.py  test_unit__m4i_search_api_auth_required.py  test_unit__m4i_search_api_header_handling.py  test_unit__m4i_search_api_health.py  test_unit__m4i_search_api_proxy_requests.py  test_unit__m4i_search_api_url_building.py
backend/m4i-synchronize-app-search/: .env.enc  Dockerfile  docker-compose.yaml  project.json  pyproject.toml  sonar-project.properties
backend/m4i-synchronize-app-search/m4i_synchronize_app_search/: __main__.py  synchronize_app_search.py
backend/m4i-update-breadcrumbs/: Dockerfile  README.md  main.py  project.json  pyproject.toml
backend/m4i-update-breadcrumbs/m4i_update_breadcrumbs/: __init__.py  breadcrumb_updater.py
backend/m4i-update-gov-data-quality/: .env.enc  Dockerfile  docker-compose.yaml  project.json  pyproject.toml  sonar-project.properties
backend/m4i-update-gov-data-quality/jars/: manifest
backend/m4i-update-gov-data-quality/m4i_update_gov_data_quality/: __main__.py  update_gov_quality.py
backend/m4i-validate-entity/: .env.enc  Dockerfile  README.md  project.json  pyproject.toml  sonar-project.properties
backend/m4i-validate-entity/m4i_validate_entity/: m4i_validate_entity.py
libs/m4i-analytics/: .env.enc  project.json  pyproject.toml  sonar-project.properties
libs/m4i-atlas-core/: .env.enc  README.md  project.json  pyproject.toml  sonar-project.properties
libs/m4i-atlas-core/m4i_atlas_core/: __init__.py
libs/m4i-atlas-core/scripts/: config_sample.py  credentials_sample.py  load_type_defs.py
libs/m4i-atlas-core/tests/: conftest.py
libs/m4i-backend-core/: .env.enc  project.json  pyproject.toml  sonar-project.properties
libs/m4i-backend-core/m4i_backend_core/: config.py
libs/m4i-backend-core/tests/: test_unit__m4i_backend_core_requires_auth.py
libs/m4i-data-management/: .env.enc  config.sample.py  credentials.sample.py  project.json  pyproject.toml  sonar-project.properties
libs/m4i-data-management/m4i_data_management/: __init__.py
libs/m4i-data-management/tests/: conftest.py
libs/m4i-flink-tasks/: .env.enc  project.json  pyproject.toml  sonar-project.properties
libs/m4i-flink-tasks/m4i_flink_tasks/: README.md  __init__.py
libs/m4i-flink-tasks/tests/: conftest.py
libs/m4i-governance-data-quality/: .env.enc  README.md  project.json  pyproject.toml  sonar-project.properties
libs/m4i-governance-data-quality/m4i_governance_data_quality/: __init__.py
libs/m4i-metrics/: .env.enc  project.json  pyproject.toml  sonar-project.properties
libs/m4i-metrics/m4i_metrics/: Metric.py  (+5 more)
reports/aurelius-license-report/: .env.enc  project.json  pyproject.toml
(+2864 files in other folders)
