[tool.poetry]
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
description = "App for importing data dictionaries into Aurelius Atlas"
license = 'UNLICENSED'
name = "m4i-data-dictionary-io"
readme = 'README.md'
version = "1.0.0"

[[tool.poetry.packages]]
include = "m4i_data_dictionary_io"

[tool.poetry.dependencies]
apache-flink = "~1.17"
avro-python3 = ">=1.10,<1.11"
confluent-kafka = "~2.6.0"
dataclasses-json = "~0.6"
openpyxl = "^3.1.5"
pandas = "1.3.0"
python = "~3.8"
tenacity = "8.5.0"
urllib3 = "1.26.2"

[tool.poetry.dependencies.m4i-atlas-core]
develop = true
path = "../../libs/m4i-atlas-core"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
