[tool.poetry]
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
description = "Post-install automation for Aurelius Atlas"
license = 'UNLICENSED'
name = "m4i-atlas-post-install"
readme = 'README.md'
version = "1.0.0"

[[tool.poetry.packages]]
include = "m4i_atlas_post_install"

[tool.poetry.dependencies]
dictdiffer = "0.9.0"
elastic-transport = "8.13.1"
elastic_enterprise_search = "~8.11"
elasticsearch = "~8.9"
python = "~3.8"
urllib3 = "1.26.2"
urlpath = "1.2.0"

[tool.poetry.dependencies.m4i-atlas-core]
develop = true
path = "../../libs/m4i-atlas-core"

[tool.poetry.dependencies.m4i-publish-state]
develop = true
path = "../m4i-publish-state"

[tool.poetry.dependencies.m4i-synchronize-app-search]
develop = true
path = "../m4i-synchronize-app-search"

[tool.poetry.dependencies.m4i-update-gov-data-quality]
develop = true
path = "../m4i-update-gov-data-quality"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
