[tool.poetry]
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
description = "Entity validator for Aurelius Atlas"
license = 'UNLICENSED'
name = "m4i-consistency-metrics"
readme = 'README.md'
version = "1.0.0"

[[tool.poetry.packages]]
include = "m4i_consistency_metrics"

[tool.poetry.dependencies]
bokeh = "2.4.3"
gunicorn = "^22.0.0"
python = "~3.8"
requests_cache = "0.5.2"

[tool.poetry.dependencies.m4i-analytics]
develop = true
path = "../../libs/m4i-analytics"

[tool.poetry.dependencies.m4i-backend-core]
develop = true
path = "../../libs/m4i-backend-core"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
