[tool.poetry]
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
description = "Backend for data2model"
license = "UNLICENSED"
name = "data2model"
readme = "README.md"
version = "1.0.0"

[[tool.poetry.packages]]
include = "m4i_data2model"

[tool.poetry.dependencies]
bokeh = "2.4.3"
gunicorn = "^22.0.0"
numpy = "1.21.4"
pandas = "1.3.0"
python = "~3.8"
xlrd = "1.2.0"

[tool.poetry.dependencies.m4i-analytics]
develop = true
path = "../../libs/m4i-analytics"

[tool.poetry.dependencies.m4i-backend-core]
develop = true
path = "../../libs/m4i-backend-core"

[tool.poetry.dependencies.m4i-graphviz-layouts]
develop = true
path = "../../libs/m4i-analytics-extensions/m4i-graphviz-layouts"

[tool.ruff]
exclude = [".ruff_cache", ".svn", ".tox", ".venv", "dist"]
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]
ignore = []
select = ["E", "F", "UP", "B", "SIM", "I"]
unfixable = []

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
