[tool.poetry]
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
description = "Lineage Rest API used as an entry point to get and push entities to atlas"
license = "UNLICENSED"
name = "m4i-lineage-rest-api"
readme = "README.md"
version = "1.0.0"

[[tool.poetry.packages]]
include = "m4i_lineage_rest_api"

[tool.poetry.dependencies]
flask-httpauth = "^4.8.0"
flask-restx = "1.0.3"
gunicorn = "^22.0.0"
itsdangerous = "2.0.1"
markupsafe = "2.0.1"
python = "~3.8"

[tool.poetry.dependencies.m4i-atlas-core]
develop = true
path = "../../libs/m4i-atlas-core"

[tool.poetry.dependencies.m4i-backend-core]
develop = true
path = "../../libs/m4i-backend-core"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
