[tool.poetry]
name = "m4i-search-api"
version = "0.1.0"
description = "API wrapper for Elastic App Search secured with Atlas user auth"
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
license = "UNLICENSED"
readme = "README.md"

[[tool.poetry.packages]]
include = "m4i_search_api"

[tool.poetry.dependencies]
# Allow local builds with Python 3.10+ while remaining compatible with the 3.8 runtime image
python = ">=3.8,<3.11"
flask = "2.2.2"
gunicorn = "^22.0.0"
requests = "^2.32.3"
pytest = "^7.4.4"

[tool.poetry.dependencies.m4i-backend-core]
path = "../../libs/m4i-backend-core"
develop = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
