[tool.poetry]
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
description = "API wrapper for Elastic App Search secured with Atlas user auth"
license = "UNLICENSED"
name = "m4i-search-api"
readme = "README.md"
version = "0.1.0"

[[tool.poetry.packages]]
include = "m4i_search_api"

[tool.poetry.dependencies]
flask = "2.1.2"
gunicorn = "^22.0.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.6.0"
python = ">=3.8,<3.11"
requests = "^2.26.0"
werkzeug = ">=2.1,<3.0"

[tool.poetry.dependencies.m4i-backend-core]
develop = true
path = "../../libs/m4i-backend-core"

[tool.poetry.dev-dependencies]
cryptography = "^41.0.0"
pytest = "^8.0.0"
pytest-mock = "^3.14.0"
python-dotenv = "^1.0.0"
responses = "^0.25.0"
tenacity = "^8.5.0"
testcontainers = "^4.0.0"

[tool.pytest.ini_options]
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests", "e2e"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
