[tool.poetry]
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
description = "Synchronize App Search job for Aurelius Atlas"
license = 'UNLICENSED'
name = "m4i-synchronize-app-search"
readme = 'README.md'
version = "1.0.0"

[[tool.poetry.packages]]
include = "m4i_synchronize_app_search"

[tool.poetry.dependencies]
apache-flink = "~1.17"
cryptography = "<43"
elastic-transport = "8.13.1"
elasticsearch = "~8.9"
python = "~3.8"
python-keycloak = "0.18.0"
urllib3 = "1.26.2"

[tool.poetry.dependencies.m4i-flink-tasks]
develop = true
path = "../../libs/m4i-flink-tasks"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
