[tool.poetry]
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
description = "Update Governance Data Quality job for Aurelius Atlas"
license = 'UNLICENSED'
name = "m4i-update-gov-data-quality"
readme = 'README.md'
version = "1.0.0"

[[tool.poetry.packages]]
include = "m4i_update_gov_data_quality"

[tool.poetry.dependencies]
apache-flink = "~1.17"
cryptography = "<43"
elastic-transport = "8.13.1"
elasticsearch = "~8.9"
python = "~3.8"
python-keycloak = "0.18.0"
urllib3 = "1.26.2"

[tool.poetry.dependencies.m4i-flink-tasks]
develop = true
path = "../../libs/m4i-flink-tasks"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
