[tool.poetry]
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
description = "Entity validator for Aurelius Atlas"
license = 'UNLICENSED'
name = "m4i-validate-entity"
readme = 'README.md'
version = "1.0.0"

[[tool.poetry.packages]]
include = "m4i_validate_entity"

[tool.poetry.dependencies]
gunicorn = "^22.0.0"
python = "~3.8"

[tool.poetry.dependencies.m4i-backend-core]
develop = true
path = "../../libs/m4i-backend-core"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
