[tool.poetry]
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
description = "Models4Insight Analytics Library"
group = {}
license = "UNLICENSED"
name = "m4i-analytics"
readme = "README.md"
version = "1.0.0"

[[tool.poetry.packages]]
include = "m4i_analytics"

[tool.poetry.dependencies]
enum-compat = "0.0.3"
future = "0.18.2"
graphviz = "0.13.2"
matplotlib = "3.1.3"
networkx = "2.4"
pandas = "1.3.0"
pydotplus = "2.0.2"
pymysql = "^1.0"
python = "~3.8"
python-keycloak = "0.18.0"
requests = "2.26.0"
requests-toolbelt = "0.9.1"
sqlalchemy = "1.3.13"
sqlparse = "0.3.0"
uuid = "1.30"

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "standard"
# Pandas 1.3.0 has limited type stub support, causing false positives for DataFrame/Series operations
# These reportOptionalMemberAccess and similar errors are not actual runtime issues with pandas
reportArgumentType = "warning"
reportAttributeAccessIssue = "warning"
reportCallIssue = "warning"
reportGeneralTypeIssues = "warning"
reportIndexIssue = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"
# Optional/external dependencies that may not be installed in all environments
reportMissingImports = "warning"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
