[tool.poetry]
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
description = "Aurelius atlas core package"
license = "UNLICENSED"
name = "m4i-atlas-core"
readme = "README.md"
version = "1.0.0"

[[tool.poetry.packages]]
include = "m4i_atlas_core"

[tool.poetry.dependencies]
aiocache = "~0.12"
aiohttp = "~3.9"
dataclasses-json = "~0.6"
pandas = "1.3.0"
python = "~3.8"
python-keycloak = "0.18.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
