[tool.poetry]
name = "m4i-backend-core"
version = "1.0.1"
description = "Shared code for the M4I backend"
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
license = 'UNLICENSED'
readme = 'README.md'

[[tool.poetry.packages]]
include = "m4i_backend_core"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
flask = "2.1.2"
werkzeug = ">=2.1,<3.0"
python-jose = { version = "3.1.0", extras = ["pycryptodome"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
