[tool.poetry]
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
description = "Shared code for the M4I backend"
license = 'UNLICENSED'
name = "m4i-backend-core"
readme = 'README.md'
version = "1.0.1"

[[tool.poetry.packages]]
include = "m4i_backend_core"

[tool.poetry.dependencies]
flask = "2.1.2"
pyjwt = ">=2.9.0"
python = ">=3.8,<3.11"
requests = ">=2.26.0"
werkzeug = ">=2.1,<3.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
