[tool.poetry]
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
description = "Shared code for the M4I backend"
license = 'UNLICENSED'
name = "m4i-backend-core"
readme = 'README.md'
version = "1.0.0"

[[tool.poetry.packages]]
include = "m4i_backend_core"

[tool.poetry.dependencies]
flask = "2.1.2"
python = "~3.8"
python-jose = { version = "3.1.0", extras = ["pycryptodome"] }

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
