[tool.poetry]
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
description = "Library of Flink tasks for Aurelius Atlas"
license = "UNLICENSED"
name = "m4i-flink-tasks"
readme = "README.md"
version = "1.0.0"

[[tool.poetry.packages]]
include = "m4i_flink_tasks"

[tool.poetry.dependencies]
apache-flink = "~1.17"
dataclasses-json = "~0.6"
elasticsearch = "~8.9"
kafka-python = "~2.0"
python = "~3.8"

[tool.poetry.dependencies.m4i-atlas-core]
develop = true
path = "../../libs/m4i-atlas-core"

[tool.poetry.dependencies.m4i-governance-data-quality]
develop = true
path = "../../libs/m4i-governance-data-quality"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
