[tool.poetry]
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
description = "Library of Governance Data Quality"
license = "UNLICENSED"
name = "m4i-governance-data-quality"
readme = "README.md"
version = "1.0.0"

[[tool.poetry.packages]]
include = "m4i_governance_data_quality"

[tool.poetry.dependencies]
dataclasses-json = "~0.6"
python = "~3.8"

[tool.poetry.dependencies.m4i-atlas-core]
develop = true
path = "../m4i-atlas-core"

[tool.poetry.dependencies.m4i-data-management]
develop = true
path = "../m4i-data-management"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
