[tool.poetry]
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
description = "Functions for calculating model consistency metrics"
license = 'UNLICENSED'
name = "m4i-metrics"
readme = 'README.md'
version = "1.0.0"

[[tool.poetry.packages]]
include = "m4i_metrics"

[tool.poetry.dependencies]
bokeh = "2.4.3"
networkx = "2.4"
numpy = "1.21.4"
pandas = "1.3.0"
python = "~3.8"

[tool.poetry.dependencies.m4i-analytics]
develop = true
path = "../m4i-analytics"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
