[tool.poetry]
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
description = "This report provides license analysis information for Aurelius projects."
license = 'UNLICENSED'
name = "aurelius-license-report"
version = "0.0.0"

[[tool.poetry.packages]]
include = "aurelius_license_report"

[tool.poetry.dependencies]
jinja2 = ">=3.1.6"
pydantic = ">=2.8.0"
pydantic-settings = ">=2.6.0"
python = "~3.8"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
